--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Pizzadad.github.io/26-06-2022",
+  "homepage": "http://pizzadad.github.io/app",
   "name": "project-26",
   "version": "0.1.0",
   "private": true,
