--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pizzadad.github.io/app",
+  "homepage": "http://pizzadad.github.io/repo",
   "name": "project-26",
   "version": "0.1.0",
   "private": true,
